--- a/index.html
+++ b/index.html
@@ -59,9 +59,8 @@
         material="shader: flat; fog: false; side: back; src: url(assets/images/sky.jpg)"
       ></a-entity>
 	  
-	   <a-entity id="vrhome"
-        <a-entity template="src: #vrhome position= "0.15 2.5 -3.5""></a-entity>
-      </a-entity>
+        <a-entity id="vrhome" template="src: #vrhome position= "0.15 2.5 -3.5""></a-entity>
+      
 	  
 	  
       <!-- 360-degree image. -->
