--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
         </a-camera>
       </a-entity>
 
-	  <a-text position="0.15 1.5 -3.5" value="Hello there! Welcome to the VR Smart Home Experience!" align = "center" width= "6"></a-text>
+      <a-text position="0.15 1.5 -3.5" value="Welcome to the VR Smart Home Experience!" align = "center" width= "5"></a-text>
 
       <!-- BEGIN INPUTS/KEYBOARD <a-button position="-0.8 1.8 -3.5" width="2" name="stuff" value="Enter Password" disabled="true" type="falt"></a-button>-->
       <a-keyboard physical-keyboard="true"></a-keyboard>
       <a-input id="password" position="-0.4 1 -2.5" type="password" placeholder="Enter your PIN" color="black"  width="1"></a-input>
       <a-form>
-        <a-button position="-0.8 0.25 -3.5" width="2" name="stuff" value="Enter Inside" disabled="false" type="raised"></a-button>
+        <a-button position="-0.8 0.25 -2.5" width="2" name="stuff" value="Enter Inside" disabled="false" type="raised"></a-button>
       </a-form>
       <!-- END INPUTS/KEYBOARD -->
 
