--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         material="shader: flat; fog: false; side: back; src: url(assets/images/sky.jpg)"
       ></a-entity>
 	  
-       <a-entity  template="src: #vrhome" position= "0 0 -3.5"></a-entity>
+       <a-image  template="src: #vrhome" position= "-0.4 2.5 -3.5"></a-image>
       
 	  
 	  
