--- a/control.html
+++ b/control.html
@@ -5,6 +5,7 @@
     <title>aframecontrol</title>
     <meta name="description" content="Aframe-Material">
     <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
+    <script src="https://unpkg.com/aframe-click-drag-component"></script>
     <script src="https://rawgit.com/mayognaise/aframe-mouse-cursor-component/master/dist/aframe-mouse-cursor-component.min.js"></script>
     <script src="https://cdn.rawgit.com/zcanter/aframe-gradient-sky/master/dist/gradientsky.min.js"></script>
     <script src="dist/aframe-material.js"></script>
@@ -36,6 +37,8 @@
            </a-cursor></a-entity>
       </a-camera></a-entity>
 
+     <a-sphere click-drag position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
+     <a-camera look-controls-enabled="false"></a-camera>
 
       <!-- BEGIN FORM -->
       <a-rounded position="0.5 0.5 -2.5" width="3" height="3" radius="0.05" rotation="0 -20 0" scale="0.3 0.3 0.3">
