--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     <script src="https://cdn.rawgit.com/zcanter/aframe-gradient-sky/master/dist/gradientsky.min.js"></script>
     <script src="dist/aframe-material.js"></script>
 	<script src="dist/mqtthome.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.js"/script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.js"></script>
+	
+	 <!-- always fullscreen -->
+	<script src="https://aframe.io/releases/0.3.0/aframe.min.js"></script>
+  <script src="https://rawgit.com/bestiejs/platform.js/master/platform.js"></script>
+  <script src="https://rawgit.com/protyze/aframe-always-fullscreen-component/master/dist/aframe-always-fullscreen-component.min.js"></script>
     <!-- TEST -->
     <script type="text/javascript">
       AFRAME.ASSETS_PATH = "./assets";
@@ -19,6 +24,9 @@
   </head>
 
   <body>
+  <a-scene embedded always-fullscreen>
+  </a-scene>
+  
     <a-scene>
       <a-entity laser-controls="hand: right"></a-entity>
       <a-assets>
